# Decentralised-AI-Swarm

./: .gitignore  Cargo.toml  README.md  commands.txt  front.py  model.json  project.env  sample.json  trained_model_run1_epoch10.json  trained_model_run1_epoch15.json  trained_model_run1_epoch20.json  trained_model_run1_epoch25.json  trained_model_run1_epoch30.json  trained_model_run1_epoch35.json  trained_model_run1_epoch40.json  trained_model_run1_epoch45.json  trained_model_run1_epoch5.json  trained_model_run1_epoch50.json  trained_model_test1_epoch10.json  trained_model_test1_epoch15.json  trained_model_test1_epoch20.json  trained_model_test1_epoch5.json
.history/: Cargo_20251112214213.toml  Cargo_20251112214826.toml  Cargo_20251112214833.toml
.history/src/: client_20251112221735.rs  client_20251112222207.rs  client_20251112222418.rs  client_20251112222506.rs  client_20251112222537.rs  client_20251112222643.rs  client_20251112222649.rs  client_20251112222659.rs  client_20251112222832.rs  client_20251112222939.rs  main_20251112214905.rs  main_20251112233038.rs  model_20251112214930.rs  model_20251112232613.rs  model_20251112232633.rs  server_20251112214546.rs  server_20251112215519.rs  server_20251112220036.rs  server_20251112220257.rs  server_20251112220308.rs  server_20251112220342.rs  server_20251112220351.rs  server_20251112220450.rs  server_20251112220459.rs  server_20251112220503.rs  server_20251112221221.rs  server_20251112221322.rs  server_20251112221501.rs  server_20251112221513.rs  server_20251112232754.rs
src/: client.rs  main.rs  messages.rs  model.rs  server.rs
