[package]
name = "Decentralised-AI-Swarm"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
rand = "^0.9"
tracing = "0.1.41"
axum = "0.8.6"
tracing-subscriber = "0.3.20"
reqwest = {version = "0.12.24",features = ["json", "blocking", "rustls-tls"]}
