[package]
name = "Decentralised-AI-Swarm"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Async Runtime ---
tokio = { version = "1", features = ["full"] }

# --- Web Framework / HTTP / WebSockets ---
# axum 0.7 keeps the familiar axum::serve API and stable ws/json features
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.5", features = ["cors"] }

# --- Networking Tools ---
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Errors / Logging ---
anyhow = "1"
thiserror = "1"

# --- Environment ---
dotenv = "0.15"

# --- Others ---
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
chrono = "0.4"
